--- a/package.json
+++ b/package.json
@@ -10,23 +10,28 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/masked-view": "^0.1.6",
+    "axios": "^0.19.2",
+    "moment": "^2.24.0",
+    "qs": "^6.9.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
-<<<<<<< HEAD
     "react-native-cli": "^2.0.1",
-=======
->>>>>>> 292ccfb90773268e2cb177cd433bf4cce2cca7b4
+    "react-native-dotenv": "^0.2.0",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.6",
+    "react-native-hide-show-password-input": "^1.1.0",
+    "react-native-image-picker": "^2.3.0",
+    "react-native-modals": "^0.19.9",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.2",
-<<<<<<< HEAD
     "react-native-splash-screen": "^3.2.0",
-=======
->>>>>>> 292ccfb90773268e2cb177cd433bf4cce2cca7b4
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.1.1",
+    "react-number-format": "^4.3.1",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
