--- a/package.json
+++ b/package.json
@@ -10,15 +10,30 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-native-fontawesome": "^0.2.1",
+    "@react-native-community/datetimepicker": "^2.2.1",
     "@react-native-community/masked-view": "^0.1.6",
+    "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-cli": "^2.0.1",
+    "react-native-datepicker-modal": "^1.3.0",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.6",
+    "react-native-modal-datetime-picker": "^8.1.3",
+    "react-native-multibar": "^0.0.12",
+    "react-native-picker-select": "^6.5.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.2",
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-svg": "^11.0.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.1.1",
+    "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
