--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react-native-datepicker-modal": "^1.3.0",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
+    "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^1.5.6",
     "react-native-image-picker": "^2.3.0",
     "react-native-modal-datetime-picker": "^8.1.3",
+    "react-native-modals": "^0.19.9",
     "react-native-multibar": "^0.0.12",
     "react-native-picker-select": "^6.5.0",
     "react-native-reanimated": "^1.7.0",
