--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.1.1",
     "react-navigation-tabs": "^2.7.0",
+    "react-number-format": "^4.3.1",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
