--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^11.0.1",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^8.1.1",
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.1.1",
     "react-navigation-tabs": "^2.7.0",
